--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "motion": "^12.0.6",
     "npm": "^11.1.0",
     "react-i18next": "^15.4.0"
