--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "devDependencies": {
+    "@types/node": "^22.13.5",
     "daisyui": "^4.12.23"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.10",
     "i": "^0.3.7",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -14,6 +17,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.0.6",
     "npm": "^11.1.0",
+    "react-calendar": "^5.1.0",
     "react-i18next": "^15.4.0"
   }
 }
