--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
 node_modules
 .env
-/assets/images/**
-/assets/songs/**
-/public/**
+
+# Media and public files
+uploads/
+public/
+*/public/songs/
+*/public/images/
+*/public/uploads/
+*/src/assets/songs/
+*/src/assets/images/
+*/src/assets/uploads/
+*.mp3
+*.wav
+*.ogg
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.svg
+*.webp
+*.mp4
+*.webm
+
+# Build files
+dist/
+build/
+*/dist/
+*/build/
+
+# Local environment
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 
