--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.1.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
+    "daisyui": "^5.0.35",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "framer-motion": "^12.12.1",
+    "geolib": "^3.3.4",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.12.1",
+    "openai": "^4.100.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
     "react-webcam": "^7.2.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -32,7 +51,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5",
-    "proxy": "http://localhost:4000"
+    "vite": "^6.0.5"
   }
 }
